Traduções do devise e escrita do readme

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,5 +1,7 @@
 'pt-BR':
   activerecord:
     attributes:
+      password: Senha
+    models:
       admin:
-        email: E-mail
+        password: Senha
