Insere cocoon e cria telefone do admin

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -13,7 +13,7 @@
         rg: RG
         cpf: CPF
         nationality: Nacionalidade
-        civil_status: Estado civíl
+        civil_status: Estado civil
         mother_name: Nome da mãe
         birth: Data de nascimento
         status: Situação
