RE #66 - change type of some fields, adapt procuracao to new fields and new layouts

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,22 @@
 'pt-BR':
+  general:
+    without_email: sem endereço eletrônico
+  gender:
+    owner:
+      male: portador
+      female: portadora
+    brazilian:
+      male: brasileiro
+      female: brasileira
+    maried:
+      male: casado
+      female: casada
+    subscribe:
+      male: inscrito
+      female: inscrita
+    live:
+      male: domiciliado
+      female: domiciliada
   activerecord:
     models:
       admin: Usuário
