--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,6 +2,7 @@
   general:
     without_email: sem endereço eletrônico
     lawyers: Advogados
+    lawyer: Advogado
   gender:
     owner:
       male: portador
