--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -174,6 +174,7 @@
         mother_name: Nome da mãe
         inss_password: Senha do meu inss
       office:
+        accounting_type: Enquadramento Contábil
         address: Endereço
         city: Cidade
         email: E-mail
