--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -442,3 +442,9 @@
       create?: 'Não autorizado a criar registros'
       update?: 'Não autorizado a atualizar registros'
       destroy?: 'Não autorizado a remover registros'
+    customer:
+      index?: 'Não autorizado a listar registros'
+      show?: 'Não autorizado a listar registros'
+      create?: 'Não autorizado a criar registros'
+      update?: 'Não autorizado a atualizar registros'
+      destroy?: 'Não autorizado a remover registros'
