--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -48,6 +48,10 @@
       male: Representado por
       female: Representada por
       other: Representado(a) por
+    assisted:
+      male: Assistido por
+      female: Assistida por
+      other: Assistido(a) por
   activerecord:
     models:
       admin: Usuário
