--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -204,6 +204,13 @@
           tributary: tributário
           tributary_pis: tributário pis/confins insumos
           others: outros
+        social_security_areas:
+          retirement_by_time: Aposentadoria por tempo de Contribuição
+          retirement_by_age: Aposentadoria por Idade
+          retirement_by_rural: Aposentadoria Rural
+          disablement: Benefícios por Incapacidade - Auxílio Doença ou Acidente - Invalidez - LOAS
+          benefit_review: Revisão de Benefício Previdenciário
+          administrative_services: Reconhecimento de Tempo, Averbação, Serviços Administrativos
         rate_work: Honorários De Trabalho ou Êxito
         rate_parceled: Parcelamento
         rate_parceled_exfield: Parcelamento
