--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -234,7 +234,7 @@
         sign_sources:
           no_signature: "Sem assinatura"
           manual_signature: "Assinatura manual"
-          zap_sign: "Assinatura digital (Zap Sign)"
+          zapsign: "Assinatura digital (Zap Sign)"
     errors:
       messages:
         record_invalid: 'A validação falhou: %{errors}'
