--- a/docs/s3.md
+++ b/docs/s3.md
@@ -3,6 +3,13 @@
 ## Overview
 ProcStudio uses a team-based multi-tenancy approach for organizing files in AWS S3. All files are stored in a single bucket with environment and team-based prefixes for logical isolation.
 
+Ainda não temos clareza como vai ficar os buckets da Amazon, visto que em algums modelos a separação de responsabilidade não é tão clara, mas a tendência é de mudarmos a abordagem atual para uma tabela polimórfica que possa abstrair todos os dados do usuário em um `pool` de arquivos, assim teremos um sistema mais consolidado de arquivos.
+
+O que poderia acontecer se por exemplo temos um Job com arquivos, depois esse Job é algo temporário e apagado, esse arquivo é deletado junto e na verdade isso seria importante para o Work, um contexto maior. Assim pensamos que o melhor é utilizar uma abordagem híbrida:
+
+1. Sistema de arquivos por pasta para apenas arquivos que sempre estarão isolados: exemplo um avatar ou uma logo do escritório;
+2. Sistema de Pool para os outros arquivos que podem ser compartilhados;
+
 ## Bucket Structure
 
 ```
